# lcr

./: .gitignore  README.md  pubspec.yaml
.github/workflows/: release.yml
android/app/: build.gradle.kts
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/assets/translations/: en-US.json  ja-JP.json  (+3 more)
lib/configs/: app_settings.dart  context.dart  image_filter.dart  theme.dart
lib/screens/: app_screen.dart  app_settings_screen.dart  comic_info_editor_screen.dart  comic_list_screen.dart  comic_reader_screen.dart  import_comic_screen.dart  reader_config_screen.dart  select_chapter_screen.dart
linux/: CMakeLists.txt
linux/appimage/: lcr.desktop
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
rust/: Cargo.toml
rust/src/: comic_import.rs  frb_generated.rs  lib.rs
rust/src/api/: backend.rs  mod.rs
rust/src/database/: app_settings.rs  comic.rs  comic_bookmark.rs  comic_chapter.rs  comic_image.rs  comic_tag.rs  mod.rs  reader_settings.rs
rust/src/database/migration/: m20220101_000001_create_table.rs  m20220101_000002.rs  mod.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: rust_lib_lcr.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_lcr.podspec
rust_builder/windows/: CMakeLists.txt
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+20 files in other folders)
