[package]
name = "rust_lib_lcr"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
anyhow = "1.0.99"
async-trait = "0.1.89"
async_zip = { version = "0.0.18", features = ["full", "tokio", "tokio-util"] }
chrono = "0.4.41"
image = "0.25.6"
regex = "1.11.2"
roxmltree = "0.20.0"
scraper = "0.24.0"
sea-orm = { version = "1.1.15", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = { version = "1.1.15", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = { version = "0.7.16", features = ["io", "io-util"] }
uuid = { version = "1.18.0", features = ["v4"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
